--- a/pond/index.html
+++ b/pond/index.html
@@ -162,9 +162,9 @@ In our evaluations, we achieve the improvements with more plausible interactions
                     Video
                 </h3>
                 <div class="text-center">
-			coming soon!
                     <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+			    coming soon!
+<!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
                     </div>
                 </div>
             </div>
