--- a/pond/index.html
+++ b/pond/index.html
@@ -177,14 +177,15 @@ In our evaluations, we achieve the improvements with more plausible interactions
                     Citation
                 </h3>
                 <div class="form-group col-md-10 col-md-offset-1">
-                    <textarea id="bibtex" class="form-control" readonly>
+			coming soon!
+<!--                     <textarea id="bibtex" class="form-control" readonly>
 @article{barron2022mipnerf360,
     title={Mip-NeRF 360: Unbounded Anti-Aliased Neural Radiance Fields},
     author={Jonathan T. Barron and Ben Mildenhall and 
             Dor Verbin and Pratul P. Srinivasan and Peter Hedman},
     journal={CVPR},
     year={2022}
-}</textarea>
+}</textarea> -->
                 </div>
             </div>
         </div>
