--- a/pond/index.html
+++ b/pond/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>mip-NeRF 360</title>
+    <title>PHIN</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,11 +17,11 @@
     <meta property="og:image:height" content="840">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bupyeonghealer.github.io/pond/"/>
-    <meta property="og:title" content="POND: Pose-guided 3D Human Generation in Indoor Scene" />
+    <meta property="og:title" content="PHIN: Pose-guided 3D Human Generation in Indoor Scene" />
     <meta property="og:description" content="In this work, we address the problem of scene-aware 3D human avatar generation based on human-scene interactions." />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mip-NeRF 360: Unbounded Anti-Aliased Neural Radiance Fields" />
+    <meta name="twitter:title" content="PHIN: Pose-guided 3D Human Generation in Indoor Scene" />
     <meta name="twitter:description" content="In this work, we address the problem of scene-aware 3D human avatar generation based on human-scene interactions." />
     <meta name="twitter:image" content="https://jonbarron.info/mipnerf360/img/gardenvase.jpg" />
 
@@ -62,30 +62,28 @@
                         <a href="https://bupyeonghealer.github.io/">
                           Minseok Kim
                         </a>
-                        </br>UNIST
+<!--                         </br>UNIST -->
                     </li>
                     <li>
                         <a href="https://github.com/Kang-ChangWoo">
                             Changwoo Kang
                         </a>
-                        </br>UNIST
+<!--                         </br>UNIST -->
                     </li>
                     <li>
                         <a href="https://github.com/Jeongin-park">
                           Jeongin Park
                         </a>
-                        </br>UNIST
+<!--                         </br>UNIST -->
                     </li>
                     <li>
                         <a href="http://rvi.unist.info//">
                           Kyungdon Joo
                         </a>
-                        </br>UNIST
+<!--                         </br>UNIST -->
                     </li>
                 </ul>
-		<br>
 		UNIST
-		</br>
             </div>
         </div>
 
