--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 		    <br>
 		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
 	 	<br>
-		    <em>paper (coming soon)</em>
+		    <em>paper (coming soon)</em> &nbsp/&nbsp
+                    <a href="https://bupyeonghealer.github.io/phin/">project page</a>
 		    <br>
 		    <br>
 		    Address the problem of scene-aware 3D human generation based on interactions. 
