--- a/phin/index.html
+++ b/phin/index.html
@@ -92,29 +92,29 @@
                 <div class="col-md-4 col-md-offset-4 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="https://arxiv.org/abs/2111.12077">
+                            <a href="https://bupyeonghealer.github.io/phin/">
                             <image src="img/360_paper_image.jpg" height="60px">
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
                         <li>
-                            <a href="https://youtu.be/zBSH-k9GbV4">
+                            <a href="https://bupyeonghealer.github.io/phin/">
                             <image src="img/youtube_icon.png" height="60px">
                                 <h4><strong>Video</strong></h4>
                             </a>
                         </li>
                         <li>
-                            <a href="http://storage.googleapis.com/gresearch/refraw360/360_v2.zip" target="popup" onclick="window.open('http://storage.googleapis.com/gresearch/refraw360/360_v2.zip','popup','width=600,height=400')">
+                            <a href="https://bupyeonghealer.github.io/phin/" target="popup" onclick="window.open('https://bupyeonghealer.github.io/phin/','popup','width=600,height=400')">
                             <image src="img/database_icon.png" height="60px">
                                 <h4><strong>Dataset</strong></h4>
                             </a>
                         </li>
-                        <li>
+<!--                         <li>
                             <a href="https://github.com/google-research/multinerf">
                             <image src="img/github.png" height="60px">
                                 <h4><strong>Code</strong></h4>
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
         </div>
