--- a/phin/index.html
+++ b/phin/index.html
@@ -93,7 +93,7 @@
                     <ul class="nav nav-pills nav-justified">
                         <li>
                             <a href="https://bupyeonghealer.github.io/phin/">
-                            <image src="img/360_paper_image.jpg" height="60px">
+                            <image src="img/paper_image.jpg" height="60px">
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
