--- a/phin/index.html
+++ b/phin/index.html
@@ -17,11 +17,11 @@
     <meta property="og:image:height" content="840">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bupyeonghealer.github.io/pond/"/>
-    <meta property="og:title" content="PHIN: Pose-guided 3D Human Generation in Indoor Scene" />
+    <meta property="og:title" content="Pose-guided 3D Human Generation in Indoor Scene" />
     <meta property="og:description" content="In this work, we address the problem of scene-aware 3D human avatar generation based on human-scene interactions." />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="PHIN: Pose-guided 3D Human Generation in Indoor Scene" />
+    <meta name="twitter:title" content="Pose-guided 3D Human Generation in Indoor Scene" />
     <meta name="twitter:description" content="In this work, we address the problem of scene-aware 3D human avatar generation based on human-scene interactions." />
     <meta name="twitter:image" content="https://jonbarron.info/mipnerf360/img/gardenvase.jpg" />
 
@@ -123,13 +123,15 @@
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <video id="v0" width="100%" autoplay loop muted controls>
-                  <source src="img/gardenvase_720.mp4" type="video/mp4" />
-                </video>
+		<image src="img/figure5.pdf" width="100%">
+<!--                 <video id="v0" width="100%" autoplay loop muted controls> -->
+<!--                   <source src="img/gardenvase_720.mp4" type="video/mp4" /> -->
+<!--                 </video> -->
 						</div>
             <div class="col-md-8 col-md-offset-2">
 							<p class="text-center">
-								Results on the <em>unseen MP3D-R</em> data.
+								Generated human bodies in different test scenes of the <em>PROX dataset</em>. 
+								Each row represents generated 3D human avatars in a given scene.
 							</p>
 						</div>
         </div>
