--- a/phin/index.html
+++ b/phin/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <h2 class="col-md-12 text-center">
 <!--                 <b>Mip-NeRF 360</b>: Unbounded <br> Anti-Aliased Neural Radiance Fields</br>  -->
-		    Pose-guided 3D Human Generation in Indoor Scene
+		    <b>Pose-guided 3D Human Generation in Indoor Scene</b>
 		    <br>
                 <small>
 								AAAI 2023
