--- a/phin/index.html
+++ b/phin/index.html
@@ -123,7 +123,7 @@
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-		<image src="img/figure5.pdf" width="100%">
+		<image src="img/figure1.png" width="100%">
 <!--                 <video id="v0" width="100%" autoplay loop muted controls> -->
 <!--                   <source src="img/gardenvase_720.mp4" type="video/mp4" /> -->
 <!--                 </video> -->
@@ -155,8 +155,23 @@ In our evaluations, we achieve the improvements with more plausible interactions
         </div>
 
 
-
         <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h3>
+			Results on the unseen </em>MP3D-R data</em>
+                </h3>
+                <div class="text-center">
+                    <div style="position:relative;padding-top:56.25%;">
+			    <image src="img/figure2.png" width="100%">
+			    coming soon!
+<!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+		
+		
+<!--         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
                     Video
@@ -169,7 +184,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
                 </div>
             </div>
         </div>
-
+ -->
             
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
