--- a/phin/index.html
+++ b/phin/index.html
@@ -180,11 +180,11 @@ In our evaluations, we achieve the improvements with more plausible interactions
                     <div style="position:relative;padding-top:56.25%;">
 			    coming soon!
 <!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
-                    </div>
-                </div>
-            </div>
-        </div>
- -->
+<!--                     </div> -->
+<!--                 </div> -->
+<!--             </div> -->
+<!--         </div> -->
+<!--  --> -->
             
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
