--- a/phin/index.html
+++ b/phin/index.html
@@ -158,12 +158,12 @@ In our evaluations, we achieve the improvements with more plausible interactions
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-			Results on the unseen </em>MP3D-R data</em>
+			Results
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
 			    <image src="img/figure2.png" width="100%">
-			    coming soon!
+			    Results on the unseen </em>MP3D-R data</em>
 <!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
                     </div>
                 </div>
@@ -184,7 +184,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
 <!--                 </div> -->
 <!--             </div> -->
 <!--         </div> -->
-<!--  --> -->
+
             
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
