--- a/phin/index.html
+++ b/phin/index.html
@@ -161,11 +161,11 @@ In our evaluations, we achieve the improvements with more plausible interactions
 			Results
                 </h3>
                 <div class="text-center">
-                    <div style="position:relative;padding-top:56.25%;">
+<!--                     <div style="position:relative;padding-top:56.25%;"> -->
 			    <image src="img/figure2.png" width="100%">
 			    Results on the unseen </em>MP3D-R data</em>
 <!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
-                    </div>
+<!--                     </div> -->
                 </div>
             </div>
         </div>
