--- a/phin/index.html
+++ b/phin/index.html
@@ -123,7 +123,7 @@
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-		<image src="img/figure1.png" width="100%">
+		<image src="img/figure-teaser.png" width="100%">
 <!--                 <video id="v0" width="100%" autoplay loop muted controls> -->
 <!--                   <source src="img/gardenvase_720.mp4" type="video/mp4" /> -->
 <!--                 </video> -->
