--- a/phin/index.html
+++ b/phin/index.html
@@ -154,7 +154,24 @@ In our evaluations, we achieve the improvements with more plausible interactions
             </div>
         </div>
 
-
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h3>
+			Intuition of Geometric Alignment Loss
+                </h3>
+                <div class="text-center">
+<!--                     <div style="position:relative;padding-top:56.25%;"> -->
+			    <image src="img/figure-loss.png" width="100%">
+				    <em>Left</em>: The overall appearance of the human avatar and the object for each geometric alignment loss (<em>i.e.</em>, distance and normal losses).
+				    <em>Right</em>: Illustration of the before/after effect of minimizing each geometric loss.
+				    Distance loss computes the point-wise distance between the human avatar and the object of the scene (gradient from red to blue) and operates in the direction of minimizing it. 
+				    Normal loss operates in the direction of minimizing the cosine similarity between the normal vector of human avatars (blue arrow) and the normal vector of objects (red arrow).
+<!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
+<!--                     </div> -->
+                </div>
+            </div>
+        </div>
+		
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
