--- a/phin/index.html
+++ b/phin/index.html
@@ -203,7 +203,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
 <!--         </div> -->
 
             
-        <div class="row">
+<!--         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
                     Citation
@@ -218,9 +218,9 @@ In our evaluations, we achieve the improvements with more plausible interactions
     journal={CVPR},
     year={2022}
 }</textarea> -->
-                </div>
-            </div>
-        </div>
+<!--                 </div> -->
+<!--             </div> -->
+<!--         </div> --> 
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
