--- a/phin/index.html
+++ b/phin/index.html
@@ -50,9 +50,10 @@
 <!--                 <b>Mip-NeRF 360</b>: Unbounded <br> Anti-Aliased Neural Radiance Fields</br>  -->
 		    <b>Pose-guided 3D Human Generation in Indoor Scene</b>
 		    <br>
-                <small>
+<!--                 <small> -->
 								AAAI 2023
-                </small>
+<!--                 </small> -->
+		    
             </h2>
         </div>
         <div class="row">
@@ -171,6 +172,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
                 </div>
             </div>
         </div>
+	<br>
 		
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
@@ -222,6 +224,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
 <!--             </div> -->
 <!--         </div> --> 
 
+	<br>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
