--- a/phin/index.html
+++ b/phin/index.html
@@ -130,10 +130,10 @@
 <!--                 </video> -->
 						</div>
             <div class="col-md-8 col-md-offset-2">
-							<p class="text-center">
+<!-- 							<p class="text-center">
 								Generated human bodies in different test scenes of the <em>PROX dataset</em>. 
 								Each row represents generated 3D human avatars in a given scene.
-							</p>
+							</p> -->
 						</div>
         </div>
 
@@ -182,7 +182,6 @@ In our evaluations, we achieve the improvements with more plausible interactions
                 <div class="text-center">
 <!--                     <div style="position:relative;padding-top:56.25%;"> -->
 			    <image src="img/figure2.png" width="100%">
-			    Results on the unseen </em>MP3D-R data</em>
 <!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
 <!--                     </div> -->
                 </div>
