--- a/phin/index.html
+++ b/phin/index.html
@@ -152,7 +152,8 @@
                 <h3>
                     Abstract
                 </h3>
-                <p class="text-justify">
+<!--                 <p class="text-justify"> -->
+		<h3>
 		In this work, we address the problem of scene-aware 3D human avatar generation based on human-scene interactions.
 In particular, we pay attention to the fact that physical contact between 3D human and scene (<em>i.e., physical human-scene interactions</em>) requires geometrically aligned for natural 3D human avatar generation.
 Motivated by this fact, we present a new 3D human generation framework that considers geometric alignment on potential contact areas between 3D human avatars and their surroundings.
@@ -160,7 +161,8 @@ In addition, we introduce a compact yet effective human pose classifier that cla
 It allows us to adaptively use geometric alignment loss according to the classified human pose.
 Compared to the state-of-the-art method, our method can generate physically and semantically plausible 3D humans that interact naturally with 3D scenes without additional post-processing.
 In our evaluations, we achieve the improvements with more plausible interactions and more variety of poses than prior research in qualitative and quantitative analysis.
-                </p>
+<!--                 </p> -->
+		</h3>
             </div>
         </div>
 
@@ -238,11 +240,13 @@ In our evaluations, we achieve the improvements with more plausible interactions
                 <h3>
                     Acknowledgements
                 </h3>
-                <p class="text-justify">
+		<h3>
+<!--                 <p class="text-justify"> -->
                 This work was supported by Institute of Information & communications Technology Planning & Evaluation(IITP) grant funded by the Korea government(MSIT)(No.2020-0-01336, Artificial Intelligence Graduate School Program(UNIST)).
                     <br>
                 The website template was borrowed from <a href="http://mgharbi.com/">Michaël Gharbi</a> and <a href="https://github.com/jonbarron/website">Jon Barron</a>.
-                </p> 
+<!--                 </p>  -->
+		 </h3>
             </div>
         </div>
     </div>
