--- a/phin/index.html
+++ b/phin/index.html
@@ -51,7 +51,7 @@
 		    <b>Pose-guided 3D Human Generation in Indoor Scene</b>
 		    <br>
 <!--                 <small> -->
-		    <span class="realistic-marker-highlight"> AAAI 2023 </span>
+		    <span class="realistic-marker-highlight"> AAAI 2023.  </span>
 		    
 		    <svg xmlns="//www.w3.org/2000/svg" version="1.1" class="svg-filters" style="display:none;">
   			<defs>
