--- a/phin/index.html
+++ b/phin/index.html
@@ -47,7 +47,8 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-		    <b>Pose-guided 3D Human Generation in Indoor Scene</b>
+<!--                 <b>Mip-NeRF 360</b>: Unbounded <br> Anti-Aliased Neural Radiance Fields</br>  -->
+		    <b><i>Pose-guided 3D Human Generation in Indoor Scene</i></b>
 		    <br>
 <!--                 <small> -->
 		    <span class="realistic-marker-highlight"> AAAI 2023. </span>
@@ -149,7 +150,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-                    Abstract
+                    <i>Abstract</i>
                 </h3>
                 <p class="text-justify">
 <!-- 		<h3> -->
@@ -168,7 +169,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-			Intuition of Geometric Alignment Loss
+                    <i>Intuition of Geometric Alignment Loss</i>
                 </h3>
                 <div class="text-center">
 <!--                     <div style="position:relative;padding-top:56.25%;"> -->
@@ -187,7 +188,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-			Results
+                    <i>Results</i>
                 </h3>
                 <div class="text-center">
 <!--                     <div style="position:relative;padding-top:56.25%;"> -->
@@ -237,7 +238,7 @@ In our evaluations, we achieve the improvements with more plausible interactions
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-                    Acknowledgements
+                    <i>Acknowledgements</i>
                 </h3>
 <!-- 		<h3> -->
                 <p class="text-justify">
@@ -251,5 +252,3 @@ In our evaluations, we achieve the improvements with more plausible interactions
     </div>
 </body>
 </html>
-
-	
