--- a/phin/index.html
+++ b/phin/index.html
@@ -154,13 +154,19 @@
                 </h3>
                 <p class="text-justify">
 <!-- 		<h3> -->
-		In this work, we address the problem of scene-aware 3D human avatar generation based on human-scene interactions.
-In particular, we pay attention to the fact that physical contact between 3D human and scene (<em>i.e., physical human-scene interactions</em>) requires geometrically aligned for natural 3D human avatar generation.
-Motivated by this fact, we present a new 3D human generation framework that considers geometric alignment on potential contact areas between 3D human avatars and their surroundings.
-In addition, we introduce a compact yet effective human pose classifier that classifies the human pose and provides potential contact areas of the 3D human avatar. 
-It allows us to adaptively use geometric alignment loss according to the classified human pose.
-Compared to the state-of-the-art method, our method can generate physically and semantically plausible 3D humans that interact naturally with 3D scenes without additional post-processing.
-In our evaluations, we achieve the improvements with more plausible interactions and more variety of poses than prior research in qualitative and quantitative analysis.
+		In this work, we address the problem of scene-aware 3D human avatar generation based on human-scene interactions. 
+			In particular, we pay attention to the fact that physical contact between a 3D human and a scene (<em>i.e., physical human-scene interactions</em>) 
+			requires a geometrical alignment to generate natural 3D human avatar. 
+			Motivated by this fact, we present a new 3D human generation framework that considers geometric alignment on potential contact areas 
+			between 3D human avatars and their surroundings. In addition, we introduce a compact yet effective human pose classifier that classifies 
+			the human pose and provides potential contact areas of the 3D human avatar. It allows us to adaptively use geometric alignment loss according 
+			to the classified human pose. Compared to state-of-the-art method, our method can generate physically and semantically plausible 3D humans 
+			that interact naturally with 3D scenes without additional post-processing. In our evaluations, we achieve the improvements with more 
+			plausible interactions and more variety of poses than prior research in qualitative and quantitative analysis. 
+			Project page:
+			<a href="https://bupyeonghealer.github.io/phin/">
+                        https://bupyeonghealer.github.io/phin/
+                        </a>.
                 </p>
 <!-- 		</h3> -->
             </div>
