--- a/phin/index.html
+++ b/phin/index.html
@@ -107,13 +107,15 @@
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
-<!--                         <li>
-                            <a href="https://bupyeonghealer.github.io/phin/">
+
+			<li>
+                            <a href="https://youtu.be/FL8oc74jDlc">
                             <image src="img/youtube_icon.png" height="60px">
                                 <h4><strong>Video</strong></h4>
                             </a>
-                        </li> -->
-                        <li>
+                        </li>
+                        
+			<li>
                             <a href="https://bupyeonghealer.github.io/phin/" target="popup" onclick="window.open('https://bupyeonghealer.github.io/phin/','popup','width=600,height=400')">
                             <image src="img/database_icon.png" height="60px">
                                 <h4><strong>Dataset</strong></h4>
@@ -206,7 +208,7 @@
         </div>
 		
 		
-<!--         <div class="row">
+        <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
                     Video
@@ -214,11 +216,11 @@
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
 			    coming soon!
-<!--                         <iframe src="https://youtube.com/embed/zBSH-k9GbV4" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
-<!--                     </div> -->
-<!--                 </div> -->
-<!--             </div> -->
-<!--         </div> -->
+                        <iframe src="https://youtu.be/FL8oc74jDlc" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
+                    </div> -->
+                </div> -->
+            </div> -->
+        </div> -->
 
             
 <!--         <div class="row">
