--- a/phin/index.html
+++ b/phin/index.html
@@ -102,7 +102,7 @@
                 <div class="col-md-4 col-md-offset-4 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="https://bupyeonghealer.github.io/phin/">
+                            <a href="https://drive.google.com/file/d/1_hxoDPVq9hcfTFkv9M1BulMZlJMVoxhG/view?usp=sharing">
                             <image src="img/paper_image.png" height="60px">
                                 <h4><strong>Paper</strong></h4>
                             </a>
@@ -215,12 +215,11 @@
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
-			    coming soon!
                         <iframe src="https://youtu.be/FL8oc74jDlc" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
-                    </div> -->
-                </div> -->
-            </div> -->
-        </div> -->
+                    </div>
+                </div> 
+            </div> 
+        </div> 
 
             
 <!--         <div class="row">
