--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
 		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
 	 	<br>
 		    <em>paper (coming soon)</em> &nbsp/&nbsp
-                    <a href="https://bupyeonghealer.github.io/phin/">project page</a>
+		    <a href="https://drive.google.com/file/d/1_hxoDPVq9hcfTFkv9M1BulMZlJMVoxhG/view?usp=sharing">paper</a> &nbsp/&nbsp
+                    <a href="https://bupyeonghealer.github.io/phin/">project page</a> &nbsp/&nbsp
+		    <a href="https://youtu.be/FL8oc74jDlc">video</a>
 		    <br>
 		    <br>
 		    Address the problem of scene-aware 3D human generation based on interactions. 
