--- a/phin/index.html
+++ b/phin/index.html
@@ -215,7 +215,7 @@
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://youtu.be/FL8oc74jDlc" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe> -->
+                        <iframe src="https://www.youtube.com/watch?v=FL8oc74jDlc" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                     </div>
                 </div> 
             </div> 
