--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		    <br>
 		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
 	 	<br>
-		    <em>paper (coming soon)</em> &nbsp/&nbsp
+<!-- 		    <em>paper (coming soon)</em> &nbsp/&nbsp -->
 		    <a href="https://drive.google.com/file/d/1_hxoDPVq9hcfTFkv9M1BulMZlJMVoxhG/view?usp=sharing">paper</a> &nbsp/&nbsp
                     <a href="https://bupyeonghealer.github.io/phin/">project page</a> &nbsp/&nbsp
 		    <a href="https://youtu.be/FL8oc74jDlc">video</a>
