--- a/phin/index.html
+++ b/phin/index.html
@@ -211,7 +211,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-                    Video
+                    <i>Video</i>
                 </h3>
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
