--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Minseok Kim (김민석, 金珉奭)</name>
               </p>
               <p>Hello, I am a Master student at <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
-		 Currently, I am a research intern at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
+		 During master's degree, I was a research intern at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
               </p>
               <p> 
 		 Before that, I received my Bachelor's degree from <a href="https://neweng.cau.ac.kr/index.do">Chung-Ang University</a>.
@@ -135,14 +135,14 @@
             </td>
 		
 	    <td valign="top" width="75%">
-                <papertitle> Pose-guided 3D Human Generation in Indoor Scene </papertitle>
+                <papertitle> Pose-Gduided 3D Human Generation in Indoor Scene </papertitle>
               <br>
 		    <em><strong>Minseok Kim</strong>, Changwoo Kang, Jeongin Park, Kyungdon Joo</em>
 		    <br>
 		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
 	 	<br>
 <!-- 		    <em>paper (coming soon)</em> &nbsp/&nbsp -->
-		    <a href="https://drive.google.com/file/d/1_hxoDPVq9hcfTFkv9M1BulMZlJMVoxhG/view?usp=sharing">paper</a> &nbsp/&nbsp
+		    <a href="https://drive.google.com/file/d/1o1OcZXDYJuwYuysIPVIStAO7GvJFkt-Y/view?usp=sharing">paper</a> &nbsp/&nbsp
                     <a href="https://bupyeonghealer.github.io/phin/">project page</a> &nbsp/&nbsp
 		    <a href="https://youtu.be/FL8oc74jDlc">video</a>
 		    <br>
