--- a/phin/index.html
+++ b/phin/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <h2 class="col-md-12 text-center">
 <!--                 <b>Mip-NeRF 360</b>: Unbounded <br> Anti-Aliased Neural Radiance Fields</br>  -->
-		    <b><i>Pose-guided 3D Human Generation in Indoor Scene</i></b>
+		    <b><i>Pose-Guided 3D Human Generation in Indoor Scene</i></b>
 		    <br>
 <!--                 <small> -->
 		    <span class="realistic-marker-highlight"> AAAI 2023. </span>
