--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </td>
 		
 	    <td valign="top" width="75%">
-                <papertitle> Pose-Gduided 3D Human Generation in Indoor Scene </papertitle>
+                <papertitle> Pose-Guided 3D Human Generation in Indoor Scene </papertitle>
               <br>
 		    <em><strong>Minseok Kim</strong>, Changwoo Kang, Jeongin Park, Kyungdon Joo</em>
 		    <br>
