--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Minseok Kim (김민석, 金珉奭)</name>
               </p>
               <p>Hello, I am a Master student at <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
-		 During my master's degree, I was a research intern at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
+		 During my master's degree, I worked at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
               </p>
               <p> 
 		 Before that, I received my Bachelor's degree from <a href="https://neweng.cau.ac.kr/index.do">Chung-Ang University</a>.
@@ -407,7 +407,7 @@
               <p style="text-align:right;font-size:small;">
                 template adapted from <a href="https://github.com/jonbarron/jonbarron_website">this awesome website</a>
 		<br>
-		Last updated: Mar 2023		 
+		Last updated: Apr 2023		 
                 <br>
               </p>
             </td>
