--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		    <em>Association for the Advancement of Artificial Intelligence (<strong>AAAI</strong>), 2023 </em>
 	 	<br>
 <!-- 		    <em>paper (coming soon)</em> &nbsp/&nbsp -->
-		    <a href="https://drive.google.com/file/d/1o1OcZXDYJuwYuysIPVIStAO7GvJFkt-Y/view?usp=sharing">paper</a> &nbsp/&nbsp
+		    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25195">paper</a> &nbsp/&nbsp
                     <a href="https://bupyeonghealer.github.io/phin/">project page</a> &nbsp/&nbsp
 		    <a href="https://youtu.be/FL8oc74jDlc">video</a>
 		    <br>
