--- a/phin/index.html
+++ b/phin/index.html
@@ -102,7 +102,7 @@
                 <div class="col-md-4 col-md-offset-4 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="https://drive.google.com/file/d/1o1OcZXDYJuwYuysIPVIStAO7GvJFkt-Y/view?usp=sharing">
+                            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25195">
                             <image src="img/paper_image.png" height="60px">
                                 <h4><strong>Paper</strong></h4>
                             </a>
