--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="mailto:hello.min1996@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/minseok-kim-010756146/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://github.com/BupyeongHealer">Github</a>
+		<a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=ibK50AQAAAAJ">Google Scholar</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
