--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <p style="text-align:center">
                 <a href="mailto:hello.min1996@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/minseok-kim-010756146/">LinkedIn</a> &nbsp/&nbsp
-                <a href="https://github.com/BupyeongHealer">Github</a>
+                <a href="https://github.com/BupyeongHealer">Github</a> &nbsp/&nbsp
 		<a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=ibK50AQAAAAJ">Google Scholar</a>
               </p>
             </td>
