--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Minseok Kim (김민석, 金珉奭)</name>
               </p>
-              <p>Hello, I am a AI research at KT, South Korea.
+              <p>Hello, I am a AI researcher at KT, South Korea.
 		 I graduated with a Master's degree in Artificial Intelligence from <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
 		 During my master's degree, I worked at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
               </p>
