--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 <name>Minseok Kim (김민석, 金珉奭)</name>
               </p>
               <p>Hello, I am an AI researcher at KT in South Korea.
-		 I graduated with a Master's degree in Artificial Intelligence from <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision. 
-		 During my master's degree, I worked at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.  
+		 I graduated with a Master's degree in Artificial Intelligence from <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision and generative model. 
+		 During my master's degree, I worked at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.
+		 At that time, I developed 3D horse reconstruction model. 
               </p>
               <p> 
 		 Before that, I received my Bachelor's degree from <a href="https://neweng.cau.ac.kr/index.do">Chung-Ang University</a>.
