--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 	      
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
+	<td width="10%" valign="middle">
+          <a href="https://magic-ai.kt.co.kr/home/"><img src="images/kt-ci.png" width="70"></a>
+        </td>
         <td width="10%" valign="middle">
           <a href="https://ps.is.mpg.de/"><img src="images/max_planck_is_logo.png" width="190"></a>
         </td>
