--- a/index.html
+++ b/index.html
@@ -169,6 +169,45 @@
 	  
       <table width="100%" align="center" border="0" cellpadding="20">
         <heading>Selected Projects</heading>
+
+    <tr onmouseout="dna_stop()" onmouseover="dna_start()">
+      <td width="25%">
+        <div class="one">
+        <div align="center" class="two" id='dna_gif'><img src='images/max-planck.png' width="200" height="150"></div>
+        <div align="center" class="two" id='dna_image'><img src='images/max-planck.png' width="200" height="150"></div>
+        </div>
+        <script type="text/javascript">
+        function dna_start() {
+        document.getElementById('dna_gif').style.opacity = "1";
+        }
+        function dna_stop() {
+        document.getElementById('dna_gif').style.opacity = "0";
+        }
+        dna_stop()
+        </script>
+      </td>
+        <!--<td width="25%"><img src="media/gwas.png" alt="GWAS image from https://upload.wikimedia.org/wikipedia/commons/5/59/GWAS_loci_influencing_human_facial_and_scalp_hair_phenotypes_-_cropped.png" width="160" height="160"></td>-->
+      <!--<tr>
+        <td width="25%"><img src="media/benedict_1.png" alt="benedict-otter-look-a-like" width="160" height="160"></td>-->
+        <td width="75%" valign="top">
+        <p>
+          <papertitle>3D horse reconstruction using single image</papertitle>
+          <br>
+		<em><strong>Minseok Kim</strong></em>, Peter Kulits, Ci Li, Silvia Zuffi, Ylva Mellbin, Elin Hernlund, Senya Polikovsky, Michael J.Black
+          <br>
+		<em>Max planck institute animal reconstruction project, 2022.09-2023.02</em><br>
+          <p></p>
+          <p></p>
+           Develop a 3D horse reconstruction method using raw single image.
+	   <br>
+           Preprocess raw data using clustering algorithm and connection algorithm. 
+	   <br>
+	   Collaborate with the veterinary and data capture teams, meeting with them weekly..
+        </p>
+        </p>
+        </td>
+      </tr>
+	      
     <tr onmouseout="dna_stop()" onmouseover="dna_start()">
       <td width="25%">
         <div class="one">
