--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
     <tr onmouseout="dna_stop()" onmouseover="dna_start()">
       <td width="25%">
         <div class="one">
-        <div align="center" class="two" id='dna_gif'><img src='images/max-planck.png' width="200" height="150"></div>
-        <div align="center" class="two" id='dna_image'><img src='images/max-planck.png' width="200" height="150"></div>
+        <div align="center" class="two" id='dna_gif'><img src='images/max-planck.png' width="250" height="150"></div>
+        <div align="center" class="two" id='dna_image'><img src='images/max-planck.png' width="250" height="150"></div>
         </div>
         <script type="text/javascript">
         function dna_start() {
@@ -202,7 +202,7 @@
 	   <br>
            Preprocess raw data using clustering algorithm and connection algorithm. 
 	   <br>
-	   Collaborate with the veterinary and data capture teams, meeting with them weekly..
+	   Collaborate with the veterinary and data capture teams, meeting with them weekly.
         </p>
         </p>
         </td>
