--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Minseok Kim (김민석, 金珉奭)</name>
               </p>
-              <p>Hello, I am an AI researcher at KT in South Korea.
+              <p>Hello, I am an AI senior research engineer at KT in South Korea.
 		 I graduated with a Master's degree in Artificial Intelligence from <a href="https://aigs.unist.ac.kr/eng/index.php">UNIST</a>, where I research on 3D computer vision and generative model. 
 		 During my master's degree, I worked at the Perceiving Systems and OSLab of <a href="https://ps.is.mpg.de/">Max Planck Institute for Intelligent Systems</a>.
 		 At that time, I developed 3D horse reconstruction model. 
@@ -452,7 +452,7 @@
               <p style="text-align:right;font-size:small;">
                 template adapted from <a href="https://github.com/jonbarron/jonbarron_website">this awesome website</a>
 		<br>
-		Last updated: Jun 2024		 
+		Last updated: Mar 2025		 
                 <br>
               </p>
             </td>
